--- a/README
+++ b/README
@@ -1,2 +1,4 @@
 This project contains some dotfiles like .vimrc and .bashrc
-for my ArchLinux setup on my laptop.
+for my ArchLinux setup on my netbook. The goal is to make
+backups of the dotfiles and also to make myself familiar
+to git version control system.
