commit from newly installed pop os!

--- a/README
+++ b/README
@@ -2,3 +2,5 @@ This project contains some dotfiles like .vimrc and .bashrc
 for my ArchLinux setup on my netbook. The goal is to make
 backups of the dotfiles and also to make myself familiar
 to git version control system.
+
+Update: installed Pop OS! 22.04 a few days ago.
