small change in README

--- a/README
+++ b/README
@@ -4,3 +4,5 @@ backups of the dotfiles and also to make myself familiar
 to git version control system.
 
 Update: installed Pop OS! 22.04 a few days ago.
+
+Updated .bashrc after setting up my yubikey
