Demo to Karan (CE 6th Sem)

--- a/README
+++ b/README
@@ -6,3 +6,5 @@ to git version control system.
 Update: installed Pop OS! 22.04 a few days ago.
 
 Updated .bashrc after setting up my yubikey
+
+Update: demo to Karan (CE 6th Sem)
